--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @keyframes background{
   /* 0 % {background-image:repeating-radial-gradient(red, yellow 10%);}
    25% {background-image:repeating-radial-gradient(red, yellow 10% red 10%);}
@@ -11,18 +10,18 @@ to {background-image:repeating-radial-gradient(red,yellow 10%,blue 15%, red 20%)
 }
 
 @keyframes ticker {
-    from {left: 1000px;}
-    to {left: 0px;}
+    from {left: 100%;}
+    to {left: 0%;}
 }
 
 @keyframes ticker-two {
     from {
         /*transform: translateX(-100%);*/
-        right: 1000px;
+        right: 100%
     }
     to {
         /*transform: translateX(-200%);*/
-        right: 0px;
+        right: 0%;
     }
 }
 
@@ -59,7 +58,7 @@ right: 100px;
 width: 20%
 height:100%;
 position: fixed;
-cursor: pointer;
+cursor: url("https://gamepedia.cursecdn.com/fallout_gamepedia/9/97/Fo1_Molotov_Cocktail.png?version=6d50619be0e85dcf9751a51bc152b1d8"), auto;
 
 }
 
