--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+   @font-face{
+    font-family: Pixtur;
+    src: url("./ assets/fonts/Pixtur.otf");
+   }
+
+   @font-face{
+    font-family: 'Neue Machina';
+    src: url("./assets/fonts/NeueMachina-Regular.otf");
+   }
+@font-face{
+  font-family: 'Druk Wide';
+  src: url("./assets/fonts/Druk-Wide-Medium.otf");
+}
+
+@font-face{
+  font-family: Messapia;
+  src: url("./assets/fonts/Messapia-Bold.otf");
+}
+
+
+
+
 @keyframes bggradient{
 from {background-image:repeating-radial-gradient(red, yellow 10%);}
 to {background-image:repeating-radial-gradient(red,yellow 10%,blue 15%, red 20%);}
@@ -14,6 +36,7 @@ to {background-image:repeating-radial-gradient(red,yellow 10%,blue 15%, red 20%)
     to {right: 0%;}
    }
 
+
 body {
   font-size: 10px;
   background-image:repeating-radial-gradient(red, yellow 10%);
@@ -21,6 +44,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  /*overflow: hidden;*/
 }
 
 .invisibox{
@@ -47,11 +71,65 @@ body {
 }
 
 .text{
-  font-family: Pixtur; 
+  font-family:Pixtur; 
   font-size: 2.2rem;
   text-shadow: 0 0 3px #FF0000;
 
 }
+
+li{
+  border:solid blue;
+  border-radius: 100%;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: transparent;
+}
+
+ul{
+  list-style: none;
+  margin:10px;
+  padding: 0;
+  width: 200px;
+}
+
+.nav-wrap{
+  max-width: 20%;
+  background-color:transparent;
+  float: right;
+  margin-top: 8%;
+  margin-right: 30px;
+  clear:both;
+}
+
+ .nav{
+  font-family: Pixtur; 
+  font-size:1.5rem;
+  color: red;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  position: sticky;
+}
+
+#buttonAbout:hover,
+#buttonAbout:focus {
+  font-style:italic;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#buttonResources:hover,
+#buttonResources:focus {
+  font-style:italic;
+  text-decoration: none;
+  cursor: pointer;
+}
+#buttonReading:hover,
+#buttonReading:focus {
+  font-style:italic;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 #ticker {
   width: 100%
@@ -68,19 +146,136 @@ body {
 .main-container {
 max-width: 100%;
 overflow: hidden;
+display: block;
 position: relative;
-background-color: transparent;
+background-color:transparent;
 cursor: url("https://gamepedia.cursecdn.com/fallout_gamepedia/9/97/Fo1_Molotov_Cocktail.png?version=6d50619be0e85dcf9751a51bc152b1d8"), auto;
 }
 
 .car{
+box-sizing: border-box; 
 overflow: hidden;
 position: relative;
+background-color:transparent;
+max-width: 60%;
+max-height:5%;
+margin: 2% 20%;
 }
 
 .car img{
+max-width: 100%;
 display:block;
 margin-left: auto;
 margin-right: auto;
+}
 
+.wire{
+overflow: hidden;
+position: absolute;
+background-color:transparent;
+max-width: 15%;
+margin-left: 10%;
+margin-right:2%;
+margin-top:70px;
+margin-bottom:20px;
+padding:10px;
+
+}
+
+.wire img{
+max-width: 100%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+
+}
+h1{
+  font-family: 'Druk Wide', Messapia, sans-serif;
+  line-height: 1.2;
+ /* background-image: linear-gradient(to left, yellow, orange, red);   
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+  text-align: center;
+  text-shadow: 2px 2px 5px red;
+
+}
+h5{
+  font-style: italic;
+
+  }
+
+p {
+  word-wrap: break-word;
+
+}
+
+.modal{
+  display: none; 
+  position: fixed; 
+  z-index: 5; 
+  padding-top: 25px; /* Location of the box */
+  right: 310px;
+  top: 150px;
+  width: 50%; 
+  height: 50%; 
+  overflow: scroll;
+  margin-left: 25px;
+  border-radius: 20px;
+  background-color:rgba(0,0,0); /* Fallback color */
+ background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+  background-color: rgba(254,251,251,0.7);
+  margin: auto;
+  padding:30px;
+  width: 80%;
+  font-family: 'Neue Machina';
+  font-size: 1rem;
+  line-height: 2;
+  text-shadow:1px,1px, white;
+}
+
+#resourcePadBasic{
+  margin-top: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 100%
+  height: 90%;
+}
+
+.readingGroup{
+  background-color: rgba(254,251,251,0.7);
+  margin: auto;
+  padding:30px;
+  width: 80%;
+  font-family: 'Neue Machina';
+  font-size: 1rem;
+  line-height: 2;
+  text-shadow:1px,1px, white;
+}
+
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  padding: 10px;
+  font-size: 24px;
+  border-style: soild;
+  border-color: red;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+}
+}
+
+@media only screen and (max-width: 480px){
+ .text{
+  font-size:1.5rem;
+ }
+  }
 }
