--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,13 @@ body {
 }
 
 li{
-  border:solid blue;
+  /*border:solid blue;*/
   border-radius: 100%;
   text-align: center;
-  padding: 10px;
+  padding: 50px;
   margin-bottom: 10px;
-  background-color: transparent;
+  /*background-color: yellow;*/
+
 }
 
 ul{
@@ -97,17 +98,18 @@ ul{
   max-width: 20%;
   background-color:transparent;
   float: right;
-  margin-top: 8%;
-  margin-right: 30px;
+  margin-top: 4%;
+  margin-right: 20px;
   clear:both;
 }
 
  .nav{
   font-family: Pixtur; 
   font-size:1.5rem;
-  color: red;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color:#75B6FF;
+  text-shadow: 0 0 1em blue, 0 0 0.2em blue;
   position: sticky;
+  z-index: 10px;
 }
 
 #buttonAbout:hover,
@@ -174,11 +176,20 @@ overflow: hidden;
 position: absolute;
 background-color:transparent;
 max-width: 15%;
-margin-left: 10%;
-margin-right:2%;
-margin-top:70px;
-margin-bottom:20px;
-padding:10px;
+bottom: 20px;
+right: 80px;
+
+
+}
+
+.wire2{
+overflow: hidden;
+position: absolute;
+background-color:transparent;
+max-width: 15%;
+bottom: 20px;
+float: left;
+left: 80px;
 
 }
 
