--- a/css/style.css
+++ b/css/style.css
@@ -268,9 +268,6 @@ p {
 
 #resourcePadBasic{
   background-color: rgba(254,251,251,0.7);
-  margin: 5%;
-  padding: 5%;
-  width: 90%;
 
 }
 
@@ -307,7 +304,9 @@ p {
 
 @media screen and (max-width: 570px){
   .car{
- margin: 50% 20%;
+    max-width: 70%;
+    height: auto;
+    top:60px;
   }
   .wire img{
     max-width: 50%;
@@ -329,20 +328,18 @@ p {
 
   li{
     font-size: 1rem;
-    
+
 
       }
 
       ul{
-        right: 40px;
+        right: 30px;
 
       }
 
     .modal{
-    margin-top:15%;
     max-width: 80%;
     max-height: 70%;
-    margin-left: 10%;
 
   }
 
@@ -359,7 +356,7 @@ p {
   }
   .main-container{
     margin-top:5%;
-    max-height: 50%;
+    margin-bottom: 5%;
   }
   .head{
     margin-top: 10%;
