--- a/css/style.css
+++ b/css/style.css
@@ -303,23 +303,33 @@ p {
 /* media queries */
 
 @media screen and (max-width: 570px){
+
+  body{
+    overflow-y: scroll;
+
+  }
   .car{
     max-width: 70%;
     height: auto;
     top:60px;
   }
   .wire img{
-    max-width: 50%;
+    max-width: 60%;
     height:auto;
   }
 
   .wire{
-    left: 30px;
+position: absolute;
+right: 3px;
   }
 
   .wire2 img{
-    max-width: 50%;
+    max-width: 60%;
     height:auto;
+  }
+
+  .wire2{
+    position: absolute;
   }
 
   .text{
@@ -328,12 +338,29 @@ p {
 
   li{
     font-size: 1rem;
-
+    margin: 2rem 0 3rem 0;
 
       }
 
+     #buttonResources{
+        grid-area: 1 / 1 / 2 / 2;
+      }
+
+      #buttonAbout{
+        grid-area: 2 / 1 / 3 / 2;
+      }
+
+      #buttonReading{
+        grid-area: 3 / 1 / 4 / 2;
+      }
+
       ul{
-        right: 30px;
+        position: relative;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: 1;
+        place-items: center;
+
 
       }
 
@@ -362,7 +389,7 @@ p {
     margin-top: 10%;
   }
   .foot{
-    margin-bottom: 30%;
+
   }
 }
  
